--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
 
-   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+   <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
    <title>MSU Denver - Homepage</title>
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
@@ -19,6 +19,7 @@
 
         <!-- newsroom includes go here -->
         @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
+        @@include('newsroomHomepageIncludes/newsroomArticles.html')
 
         <!-- footer includes -->
 
