--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
 
-   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+   <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
    <title>MSU Denver - Homepage</title>
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
    <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
@@ -60,7 +60,14 @@
         <!-- newsroom includes go here -->
         <div class="container">
 	<div class="row">
-		<h2>Hello World! (newsroom)</h2>
+		<h2>Newsroom Homepage Hero Goes here</h2>
+	</div>
+</div>
+        <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<h3>hello world</h3>
+		</div>
 	</div>
 </div>
 
