--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -121,8 +121,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="row text-center">
-		<div clas="col-md-4">
+	<div class="row">
+		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 article-cta center-block text-center">
 			<button class="btn btn-lg btn-default">Read More Stories</button>
 		</div>
 	</div>
