--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -23,6 +23,7 @@
 
         <!-- footer includes -->
 
+        @@include('newsroomHomepageIncludes/newsroomFooter.html')
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
