--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -130,6 +130,9 @@
 
         <!-- footer includes -->
 
+        <footer>
+	<h2>hello i'm the footer</h2>
+</footer>
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
