--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -137,23 +137,65 @@
 				<div class="col-md-4">
 					<h3 class="footer-header">News Resources</h3>
 					<ul>
-						<li><a href="">listItem</a></li>
-						<li><a href="">listItem</a></li>
-						<li><a href="">listItem</a></li>
-						<li><a href="">listItem</a></li>
+						<li><a href="">Media Contacts</a></li>
+						<li><a href="">Experts Guide</a></li>
+						<li><a href="">For Journalists</a></li>
+						<li><a href="">MSU Denver Media Library</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
 					<h3 class="footer-header">The Insider</h3>
 					<ul>
-						<li><a href="">listItem</a></li>
-						<li><a href="">listItem</a></li>
-						<li><a href="">listItem</a></li>
-						<li><a href="">listItem</a></li>
+						<li><a href="">Subscribe to the insider</a></li>
+						<li><a href="">Submit a story</a></li>
+						<li><a href="">Send us feedback</a></li>
+						<li><a href="">Contact Us</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<img src="" alt="">
+					<img src="style-assets/media/newsroom-redesign/msu-denver-logo.svg" alt="">
+					<div class="row icon-links">
+						<div class="col-xs-2">
+							<a href=""><span class="fa fa-facebook-f fa-2x"></span></a>
+						</div>
+						<div class="col-xs-2">
+							<a href=""><span class="fa fa-twitter fa-2x"></span></a>
+						</div>
+						<div class="col-xs-2">
+							<a href=""><span class="fa fa-instagram fa-2x"></span></a>
+						</div>
+						<div class="col-xs-2">
+							<a href=""><span class="fa fa-linkedin fa-2x"></span></a>
+						</div>
+						<div class="col-xs-2">
+							<a href=""><span class="fa fa-search fa-2x"></span></a>
+						</div>
+						<div class="col-xs-2">
+							<a href=""><span class="fa fa-youtube fa-2x"></span></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer-bottom">
+		<div class="container">
+			<div class="row text-center">
+				<div class="col-md-4">
+					<a href="">MSUDenver.edu</a>
+				</div>
+				<div class="col-md-4">
+					<a href="">Give to MSU Denver</a>
+				</div>
+				<div class="col-md-4">
+					<a href="">Apply to MSU Denver</a>
+				</div>
+			</div>
+			<div class="row ptc text-center">
+				<div class="col-md-12">
+					Metropolitan State University of Denver
+					<br>
+					<a href="">Privacy</a>, <a href="">Terms</a>, and <a href="">Conditions</a>
 				</div>
 			</div>
 		</div>
