--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -15,9 +15,9 @@
     <body style="padding-top: 0px;">
         
         <!-- header includes -->
-        <div class="top-banner">
+        <!-- <div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
-</div>
+</div> -->
 <nav class="navbar navbar-default">
   <div class="container-fluid newsroom-nav-container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -29,7 +29,7 @@
         <span class="icon-bar"></span>
       </button>
       <a href="#" class="navbar-brand">
-        <img src="style-assets/media/newsroom-redesign/msu-denver-logo-wide.svg" alt="Newsroom Logo" width="140px">
+        <img src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" width="140px">
       </a>
     </div>
 
