--- a/www-root/newsroom-detail.html
+++ b/www-root/newsroom-detail.html
@@ -1,5 +1,5 @@
 
-        <!-- header includes -->
+
         <!DOCTYPE html>
 <html lang="en-US">
 <head>
@@ -40,7 +40,7 @@
       <!-- <ul class="nav navbar-nav">
       </ul> -->
       <ul id="nav-left" class="nav navbar-nav navbar-left">
-        <h3 id="nav-h3">News from MSU Denver</h3>
+        <h3 id="nav-h3"><strong>R</strong>elevant. <strong>E</strong>ssential. <strong>D</strong>enver.</h3>
         <li><a href="#" class="underline-link">All Stories</a></li>
         <li style="padding-right: 0px;"><a href="#" class="underline-link">Trending Topics</a></li>
       </ul>
@@ -206,43 +206,43 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-4">
-					<h3 class="footer-header">News Resources</h3>
+					<h3 class="footer-header">Connect with RED</h3>
 					<ul>
-						<li><a href="" class="">Media Contacts</a></li>
-						<li><a href="" class="">Experts Guide</a></li>
-						<li><a href="" class="">For Journalists</a></li>
-						<li style="border-bottom: none;"><a href="">MSU Denver Media Library</a></li>
+						<li><a href="" class="">Subscribe</a></li>
+						<li><a href="mailto:red@msudenver.edu" class="">Submit a story</a></li>
+						<li><a href="mailto:red@msudenver.edumailto:red@msudenver.edu" class="">Send us feedback</a></li>
+						<li style="border-bottom: none;"><a href="mailto:red@msudenver.edu">Contact Us</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<h3 class="footer-header">The Insider</h3>
+					<h3 class="footer-header">News Resources</h3>
 					<ul>
-						<li><a href="" class="">Subscribe to the insider</a></li>
-						<li><a href="" class="">Submit a story</a></li>
-						<li><a href="" class="">Send us feedback</a></li>
-						<li style="border-bottom: none;"><a href="">Contact Us</a></li>
+						<li><a href="https://msudenver.edu/experts/" class="">Experts Guide</a></li>
+						<li><a href="https://msudenver.edu/newsroom/dailyclips/" class=""></a>MSU Denver in the News</li>
+						<li><a href="https://msudenver.edu/mediaresources/" class="">Journalists Resources</a></li>
+						<li style="border-bottom: none;"><a href="mailto:carrollt@msudenver.edu">Contact Media Relations</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 text-center">
 					<img src="style-assets/media/newsroom-redesign/msu-denver-informal-footer-logo.svg" alt="">
 					<div class="row icon-links">
 						<div class="col-xs-2">
-							<a href=""><span class="fa fa-facebook-f fa-2x"></span></a>
+							<a href="https://www.facebook.com/msudenver"><span class="fa fa-facebook-f fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href=""><span class="fa fa-twitter fa-2x"></span></a>
+							<a href="http://twitter.com/msudenver"><span class="fa fa-twitter fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href=""><span class="fa fa-instagram fa-2x"></span></a>
+							<a href="https://instagram.com/msu_denver"><span class="fa fa-instagram fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href=""><span class="fa fa-linkedin fa-2x"></span></a>
+							<a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><span class="fa fa-linkedin fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href=""><span class="fa fa-search fa-2x"></span></a>
+							<a href="http://www.flickr.com/photos/msudenver/sets/"><span class="fa fa-flickr fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href=""><span class="fa fa-youtube fa-2x"></span></a>
+							<a href="http://www.youtube.com/user/msudenver"><span class="fa fa-youtube fa-2x"></span></a>
 						</div>
 					</div>
 				</div>
