--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -102,25 +102,18 @@
         <div id="newsroom-hero" class="homepage-hero">
 	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
 	<div class="container">
-		<div class="row hero-tab">
-			<div class="col-md-12 text-center">
-				<h3>Featured Story</h3>
+		<div class="row">
+			<div class="col-md-12 col-lg-8 col-lg-offset-2 hero-tab text-center">
 				<h2>Overcoming Bullies</h2>
-				<h4>Story: Doug McPherson / Photos: Mark Stahl</h4>
-			</div>
-		</div>
-		<div class="row description-tab">
-			<div class="col-md-12 text-center">
-				<p>
-					Student overcomes years of harassment, finds community at MSU Denver and shares a powerful message of hope.
-				</p>
+				<h3>Student overcomes years of harassment, finds community at MSU Denver and shares a powerful message of hope.</h3>
 			</div>
 		</div>
 	</div>
 </div>
+
         <div class="container-fluid article-container">
 	<div class="row">
-		<div class="col-md-12 text-center">
+		<div class="col-md-12">
 			<div class="col-xs-12 col-sm-6 col-md-4 article-item">
 				<img src="http://via.placeholder.com/580x450" alt="Article Image">
 				<h4>Category</h4>
@@ -165,6 +158,7 @@
 		</div>
 	</div>
 </div>
+
 
         <!-- Terminal Four Footer starts -->
         <footer>
