--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -11,9 +11,14 @@
         @@include('newsroomHomepageIncludes/newsroomFooter.html')
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
+        <t4 type="media" id="117951"/>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
+        <t4 type="media" id="117952"/>
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
+        <t4 type="media" id="117953"/>
         <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
+        <t4 type="media" id="148794"/>
+
 
             <!-- allow mobile menu dropdown to scroll -->
             <!-- <script>
