--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -1,15 +1,27 @@
         <!DOCTYPE html>
 <html lang="en-US">
 <head>
-   <meta charset="UTF-8">
+  <meta charset="UTF-8">
 
-   <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
-   <title>RED - MSU Denver Newsroom</title>
+  <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+  <title>RED - Relevant. Essential. Denver.</title>
+  <!-- Meta Data -->
+  <t4 type="meta" id="1"/><t4 type="meta" id="2"/><t4 type="meta" id="3"/><t4 type="meta" id="4"/><t4 type="meta" id="5"/><t4 type="meta" id="6"/><t4 type="meta" id="7"/><t4 type="meta" id="8"/><t4 type="meta" id="9"/><t4 type="meta" id="10"/>
+  <t4 type="meta" id="11"/><t4 type="meta" id="12"/><t4 type="meta" id="13"/><t4 type="meta" id="14"/><t4 type="meta" id="15"/><t4 type="meta" id="16"/>
+
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" /> <!-- test Gotham font -->
-   <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-   <link rel="stylesheet" href="style-assets/css/newsroom-style.css" />
-   <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="style-assets/css/newsroom-style.css" />
+  <link rel="stylesheet" href="<t4 type="media" formatter="path/*" id="146559" />" />
+  <script src="style-assets/lib/jquery/jquery.min.js"></script>
+  <script src="<t4 type="media" formatter="path/*" id="117951" />"></script>
+
+<style>
+.newsroom-nav-container {background: url('<t4 type="media" formatter="path/*" id="148802" />')}
+</style>
+
 </head>
     <body style="padding-top: 0px;">
 
@@ -38,7 +50,7 @@
       <!-- <ul class="nav navbar-nav">
       </ul> -->
       <ul id="nav-left" class="nav navbar-nav navbar-left">
-        <h3 id="nav-h3"><strong>R</strong>elevant. <strong>E</strong>ssential. <strong>D</strong>enver.</h3>
+        <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
         <li><a href="#" class="underline-link">All Stories</a></li>
         <li style="padding-right: 0px;"><a href="#" class="underline-link">Trending Topics</a></li>
       </ul>
@@ -99,7 +111,7 @@
         <!-- Terminal Four Header ends -->
 
         <!-- newsroom includes go here -->
-        <div id="newsroom-hero" class="homepage-hero">
+        <div id="newsroom-hero" class="news-hero">
 	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
 	<div class="container">
 		<div class="row">
@@ -237,9 +249,14 @@
 
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
+        <t4 type="media" id="117951"/>
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
+        <t4 type="media" id="117952"/>
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
+        <t4 type="media" id="117953"/>
         <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
+        <t4 type="media" id="148794"/>
+
 
             <!-- allow mobile menu dropdown to scroll -->
             <!-- <script>
