--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -11,40 +11,15 @@
         @@include('newsroomHomepageIncludes/newsroomFooter.html')
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
-        <t4 type="media" id="117951"/>
+        <!-- <t4 type="media" id="117951"/> -->
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
         <!-- <t4 type="media" id="117952"/> -->
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
         <!-- <t4 type="media" id="117953"/> -->
-        <!-- <script src="style-assets/lib/custom-scripts/newsroom.js"></script> -->
+        <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
         <!-- <t4 type="media" id="148794"/> -->
 
 
-            <script>
-
-    $(document).ready(function(){
-    	'use strict' ;
-
-    	var width_threshold = 900;
-
-
-    	// scrollTop function
-    	$(window).scroll(function(){
-    		var position = $(window).scrollTop();
-    		var width     =  $(window).width();
-        $(".newsroom-navbar").removeClass("newsroom-navbar-change");
-        $(".navbar-brand").removeClass("navbar-brand-change");
-
-
-    		if( position > 15 && width > width_threshold) {
-    			$(".newsroom-navbar").toggleClass("newsroom-navbar-change");
-    			$(".navbar-brand").toggleClass("navbar-brand-change");
-    		}
-
-    	});
-    });
-
-            </script>
 
     </body>
 
