--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -21,12 +21,12 @@
   <!-- <script src="<t4 type="media" formatter="path/*" id="117951" />"></script> -->
 
 <!-- <style>
-.newsroom-nav-container {background: url('<t4 type="media" formatter="path/*" id="148802" />')}
+.newsroom-navbar {background: url('<t4 type="media" formatter="path/*" id="148802" />')}
 </style> -->
 
 </head>
 
-        
+
 <!-- Navigation  -->
 <nav id="" class="navbar navbar-default navbar-fixed-top">
   <div id="" class="container-fluid newsroom-navbar">
@@ -41,7 +41,7 @@
       <a href="#" class="navbar-brand">
         <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" style="float:left">
         <!-- <img id="" src="<t4 type="media" formatter="path/*" id="149184" />" alt="RED Logo" style="float:left"> -->
-        <!-- <bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver. -->
+          <!-- <h3 id="nav-h3" class="visible-xs"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3> -->
       </a>
 
     </div>
@@ -49,9 +49,29 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-2">
       <ul id="" class="nav navbar-nav navbar-left">
-        <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
-        <li><a href="/all-stories" class="underline-link">All Stories</a></li>
-        <li style="padding-right: 0px;"><a href="/topics" class="underline-link">Trending Topics</a></li>
+        <h3 id="nav-h3" class="hidden-xs hidden-sm"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle underline-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Stories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/2018">2018</a></li>
+            <li><a href="/2017">2017</a></li>
+          </ul>
+        </li>
+        <li class="dropdown"><a href="#" class="dropdown-toggle underline-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trending Topics <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/arts-and-culture">Arts and culture</a></li>
+            <li><a href="/athletics">Athletics</a></li>
+            <li><a href="/aviation-and-aerospace">Aviation and Aerospace</a></li>
+            <li><a href="/business-and-economics">Business and economics</a></li>
+            <li><a href="/cybersecurity">Cybersecurity</a></li>
+            <li><a href="/education">Education</a></li>
+            <li><a href="/health-and-wellness">Health and wellness</a></li>
+            <li><a href="/hospitality-and-tourism">Hospitality and tourism</a></li>
+            <li><a href="/politics-and-policy">Politics and policy</a></li>
+            <li><a href="/science-and-technology">Science and technology</a></li>
+          </ul>
+        </li>
+
       </ul>
       <form id="" class="navbar-form navbar-right">
         <div class="input-group">
@@ -210,40 +230,15 @@
 
 
         <script src="style-assets/lib/jquery/jquery.min.js"></script>
-        <t4 type="media" id="117951"/>
+        <!-- <t4 type="media" id="117951"/> -->
         <script src="style-assets/lib/jquery-match-height/jquery.matchHeight.js"></script>
         <!-- <t4 type="media" id="117952"/> -->
         <script src="style-assets/lib/boostrap/bootstrap.min.js"></script>
         <!-- <t4 type="media" id="117953"/> -->
-        <!-- <script src="style-assets/lib/custom-scripts/newsroom.js"></script> -->
+        <script src="style-assets/lib/custom-scripts/newsroom.js"></script>
         <!-- <t4 type="media" id="148794"/> -->
 
 
-            <script>
-
-    $(document).ready(function(){
-    	'use strict' ;
-
-    	var width_threshold = 900;
-
-
-    	// scrollTop function
-    	$(window).scroll(function(){
-    		var position = $(window).scrollTop();
-    		var width     =  $(window).width();
-        $(".newsroom-navbar").removeClass("newsroom-navbar-change");
-        $(".navbar-brand").removeClass("navbar-brand-change");
-
-
-    		if( position > 15 && width > width_threshold) {
-    			$(".newsroom-navbar").toggleClass("newsroom-navbar-change");
-    			$(".navbar-brand").toggleClass("navbar-brand-change");
-    		}
-
-    	});
-    });
-
-            </script>
 
     </body>
 
