--- a/development/terminalfour/src/html/newsroom.html
+++ b/development/terminalfour/src/html/newsroom.html
@@ -7,6 +7,7 @@
         @@include('newsroomHomepageIncludes/newsroomHomepageHero.html')
         @@include('newsroomHomepageIncludes/newsroomArticles.html')
         @@include('newsroomHomepageIncludes/calls-to-action.html')
+        @@include('newsroomHomepageIncludes/subscribe-alert.html')
 
 
         <!-- Terminal Four Footer starts -->
