--- a/www-root/newsroom.html
+++ b/www-root/newsroom.html
@@ -185,6 +185,13 @@
 
 </div>
 
+        <div id="subscribe" class="fade" data-alert="alert">
+  <div class="col-md-3 col-md-offset-8 subscribe-alert alert alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <a href="http://cloud.communications.msudenver.edu/red" class="btn btn-lg btn-default newsroom-cta"> Subscribe </a>
+  </div>
+</div>
+
 
 
         <!-- Terminal Four Footer starts -->
